# FluidSimulation

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  fluidsim.pyi  main.cpp
.github/workflows/: release.yml
benchmarks/: CMakeLists.txt  sim_benchmark.cpp
cmake/: bin2c.cmake  dependencies.cmake  embedded_resources.cmake  scripting.cmake  shaders.cmake  version.cmake  wgsl_to_h.cmake
fluidsim/: __init__.pyi  physics.pyi  system.pyi  ui.pyi
packaging/: app.rc  fluidsim.desktop  windows-installer.iss
plugins/maze-generator/: main.py  readme.md
plugins/plugin-installer/: main.py  readme.md
src/: app.cpp  app.hpp  app_settings.hpp  color_generator.hpp  notification_manager.cpp  notification_manager.hpp  wgpu_context.cpp  wgpu_context.hpp
src/capture/: gpu_readback.hpp  screenshot_capture.cpp  screenshot_capture.hpp
src/compute/: advect.wgsl  boundary.wgsl  fluid_pipelines.cpp  fluid_pipelines.hpp  fluid_sim.cpp  fluid_sim.hpp  fluid_source.hpp  fluid_source_list.hpp  fluid_state.cpp  fluid_state.hpp  gpu_profiler.hpp  inject.wgsl  resample_pipelines.cpp  resample_pipelines.hpp  wgpu_helper.hpp
src/compute/shaders/: advect_dye.wgsl  boundary.wgsl  divergence.wgsl  inject.wgsl  inject_dye.wgsl  pressure.wgsl  subtract.wgsl
src/compute/shaders/physics/: advect.wgsl  advect_dye.wgsl  boundary.wgsl  curl.wgsl  divergence.wgsl  fill_circle.wgsl  inject.wgsl  pressure.wgsl  subtract.wgsl  vorticity.wgsl
src/compute/shaders/resample/: common.wesl  resample_f32.wesl  resample_f32.wgsl  resample_u32.wesl  resample_u32.wgsl  resample_vec2f.wesl  resample_vec2f.wgsl  resample_vec4f.wesl  resample_vec4f.wgsl
src/impl/: stb_impl.cpp
src/render/: render.cpp  render.hpp  render_settings.hpp  shader.wgsl
src/render/shaders/: shader.wgsl
src/save/: fsim_file.hpp  fsim_serializer.cpp  fsim_serializer.hpp  save_manager.cpp  save_manager.hpp
src/scripting/: bindings.cpp  engine.cpp  engine.hpp  generate_loader.py  plugin_manager.hpp  plugin_settings.hpp  python_api.cpp  python_api.hpp  python_binding.hpp  script.hpp  script_panel.hpp  script_runtime.hpp  script_source.hpp  scripting_engine.cpp  scripting_engine.hpp  scripting_host.hpp  scripting_loader.cpp  scripting_loader.hpp  scripting_settings.hpp
src/ui/: fluid_viewport.hpp  font_manager.cpp  font_manager.hpp  imgui_manager.cpp  imgui_manager.hpp  imgui_serialization.cpp  imgui_serialization.hpp  imgui_style.hpp  ui_settings.hpp
src/ui/controls/: brush_widget.cpp  brush_widget.hpp  controls_panel.cpp  controls_panel.hpp  render_widget.cpp  render_widget.hpp  simulation_widget.cpp  simulation_widget.hpp  source_widget.cpp  source_widget.hpp
src/ui/import/: import_panel.cpp  import_panel.hpp
src/ui/notifications/: notifications_area.cpp  notifications_area.hpp  notifications_panel.cpp  notifications_panel.hpp
src/ui/random_splat/: splat_panel.cpp  splat_panel.hpp  splat_settings.hpp  splat_widget.cpp  splat_widget.hpp
src/ui/script/: script_console.cpp  script_console.hpp  script_editor.cpp  script_editor.hpp  script_ide.cpp  script_ide.hpp  script_panel.cpp  script_panel.hpp
src/ui/script/plugin/: plugin_panel.cpp  plugin_panel.hpp  plugins_panel.cpp  script_panel.hpp
src/ui/scripting/: script_editor.cpp  script_editor.hpp  script_ide.cpp  script_ide.hpp
src/ui/scripting/plugin/: plugins_panel.cpp  plugins_panel.hpp
src/ui/stats/: stats_panel.cpp  stats_panel.hpp  stats_widget.cpp  stats_widget.hpp
src/ui/widgets/: combo_enum.hpp  common.hpp  slider_float.hpp  velocity_input.cpp  velocity_input.hpp
src/utils/: color_generator.hpp  deffered_queue.hpp  dynlib.cpp  dynlib.hpp  file_dialog.hpp  file_utils.cpp  file_utils.hpp  image_processor.cpp  image_processor.hpp  observable.hpp  platform_utils.cpp  platform_utils.hpp  process_stats.hpp  python_find.cpp  python_find.hpp  string_escaping.hpp
tools/: gen_stubs.py
